[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/gamejam-maicol.png" type="Texture" id=1]
[ext_resource path="res://Code/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/laser.png" type="Texture" id=3]
[ext_resource path="res://Assets/Audio/continouslaser.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/OUCHMEDISPARARON.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sprites/charge_beam.png" type="Texture" id=6]

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 2 )
SPEED = 300.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="LaserCast" type="RayCast2D" parent="."]
scale = Vector2( 1.5, 1.5 )
enabled = true
cast_to = Vector2( 0, 2000 )
collision_mask = 2
collide_with_areas = true

[node name="Sprite" type="Sprite" parent="LaserCast"]
visible = false
position = Vector2( 0, 372.667 )
scale = Vector2( 1, 10 )
texture = ExtResource( 3 )

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="EnemyDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 0.88

[node name="Charge_Beam" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 33 )
texture = ExtResource( 6 )

[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
